fix spacing

--- a/ojt-monitoring-files/ojt-pending/styles.css
+++ b/ojt-monitoring-files/ojt-pending/styles.css
@@ -210,7 +210,6 @@ section .pending-students-box .students-table {
 .students-table .table-data td {
     padding: 20px;
     height: 20px;
-    width: 28%;
 }
 
 .students-table .table-data td:first-child {
